# PCU

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
docs/architecture/: FEATURE_MATRIX.md  MASTER_PLAN.md
docs/modding/: MODDING_API.md
include/VoxelForge/: Engine.hpp
include/VoxelForge/audio/: AudioSystem.hpp
include/VoxelForge/core/: Application.hpp  ECS.hpp  Input.hpp  Logger.hpp  Memory.hpp  Timer.hpp  Window.hpp
include/VoxelForge/engine/: Config.hpp  EventSystem.hpp  JobSystem.hpp
include/VoxelForge/entity/: Entity.hpp
include/VoxelForge/game/: AchievementSystem.hpp  CommandManager.hpp  Game.hpp  Inventory.hpp  Item.hpp  RecipeRegistry.hpp  Statistics.hpp
include/VoxelForge/modding/: ModLoader.hpp
include/VoxelForge/networking/: Connection.hpp  NetworkManager.hpp
include/VoxelForge/physics/: CharacterController.hpp  CollisionManager.hpp  PhysicsSystem.hpp
include/VoxelForge/rendering/: Camera.hpp  ChunkRenderer.hpp  EntityRenderer.hpp  GUIRenderer.hpp  ParticleRenderer.hpp  PostProcessor.hpp  Renderer.hpp  ShaderManager.hpp  ShadowRenderer.hpp  SkyRenderer.hpp  TextureAtlas.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanContext.hpp  VulkanDevice.hpp  VulkanFramebuffer.hpp  VulkanRenderPass.hpp  VulkanSwapchain.hpp  VulkanSync.hpp
include/VoxelForge/scripting/: LuaBindings.hpp  LuaEngine.hpp
include/VoxelForge/utils/: Compression.hpp  NBT.hpp  Noise.hpp  Profiler.hpp  Random.hpp
include/VoxelForge/world/: Block.hpp  Chunk.hpp  ChunkMesher.hpp  World.hpp  WorldGenerator.hpp
src/: main.cpp  server_main.cpp
src/audio/: AudioSystem.cpp  SoundManager.cpp
src/core/: Application.cpp  Engine.cpp  Input.cpp  Logger.cpp  Memory.cpp  Timer.cpp  Window.cpp
src/engine/: Config.cpp  EventSystem.cpp  JobSystem.cpp  ResourceManager.cpp
src/entity/: Entity.cpp  EntityBase.cpp  EntityManager.cpp  ItemEntity.cpp  LivingEntity.cpp  MobBase.cpp  Player.cpp  ProjectileEntity.cpp
src/game/: AchievementSystem.cpp  CommandManager.cpp  CraftingSystem.cpp  Game.cpp  GameState.cpp  Inventory.cpp  RecipeRegistry.cpp  Statistics.cpp
src/modding/: ModContext.cpp  ModLoader.cpp  ModRegistry.cpp  NativePlugin.cpp
src/networking/: Client.cpp  Connection.cpp  NetworkManager.cpp  Packet.cpp  Server.cpp
src/physics/: CharacterController.cpp  CollisionManager.cpp  PhysicsSystem.cpp
src/rendering/: Camera.cpp  ChunkRenderer.cpp  EntityRenderer.cpp  GUIRenderer.cpp  ParticleRenderer.cpp  PostProcessor.cpp  Renderer.cpp  ShaderManager.cpp  ShadowRenderer.cpp  SkyRenderer.cpp  TextureAtlas.cpp  VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanContext.cpp  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanImage.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanSwapchain.cpp  VulkanSync.cpp
src/scripting/: LuaBindings.cpp  LuaEngine.cpp
src/utils/: Compression.cpp  NBT.cpp  Noise.cpp  Profiler.cpp  Random.cpp
src/world/: AnvilLoader.cpp  BiomeRegistry.cpp  BlockRegistry.cpp  BlockState.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesher.cpp  ChunkSection.cpp  DimensionRegistry.cpp  LightEngine.cpp  World.cpp  WorldGenerator.cpp
tests/: CMakeLists.txt
tests/unit/: test_chunk.cpp  test_chunk_mesher.cpp  test_ecs.cpp  test_logger.cpp  test_main.cpp  test_memory.cpp  test_noise.cpp  test_random.cpp  test_renderer.cpp  test_timer.cpp  test_vulkan_buffer.cpp
